--- a/LibreriaClases/LibreriaClases.csproj
+++ b/LibreriaClases/LibreriaClases.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Administrador.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="Operaciones.cs" />
+    <Compile Include="Persona.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registracion.cs" />
