--- a/LibreriaClases/BLL.csproj
+++ b/LibreriaClases/BLL.csproj
@@ -45,10 +45,17 @@
     <Compile Include="Cliente.cs" />
     <Compile Include="Operaciones.cs" />
     <Compile Include="Persona.cs" />
+    <Compile Include="PersonaBLL.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registracion.cs" />
     <Compile Include="Vendedor.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{04f11cb7-4f42-492c-9bb2-643429c7a1cb}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
